- add link to Student on Instructors page when valid InstructorID & CourseID combination is queried

--- a/ContosoUniversity/Views/Instructor/Index.cshtml
+++ b/ContosoUniversity/Views/Instructor/Index.cshtml
@@ -107,7 +107,7 @@
 		{
 			<tr>
 				<td>
-					@item.Student.FullName
+					@Html.ActionLink(@item.Student.FullName, "Details", "Student", new { id = item.Student.ID }, null)
 				</td>
 				<td>
 					@Html.DisplayFor(modelItem => item.Grade)
