--- a/ContosoUniversity/Views/Instructor/Delete.cshtml
+++ b/ContosoUniversity/Views/Instructor/Delete.cshtml
@@ -1,56 +1,58 @@
 ﻿@model ContosoUniversity.Models.Instructor
 
 @{
-    ViewBag.Title = "Delete";
+	ViewBag.Title = "Delete";
 }
 
 <h2>Delete</h2>
 
 <h3>Are you sure you want to delete this?</h3>
+
 <div>
-    <h4>Instructor</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.OfficeAssignment.Location)
-        </dt>
+	<h4>Instructor</h4>
+	<hr />
+	<dl class="dl-horizontal">
+		<dt>
+			@Html.DisplayNameFor(model => model.LastName)
+		</dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.OfficeAssignment.Location)
-        </dd>
+		<dd>
+			@Html.DisplayFor(model => model.LastName)
+		</dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.LastName)
-        </dt>
+		<dt>
+			@Html.DisplayNameFor(model => model.FirstMidName)
+		</dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.LastName)
-        </dd>
+		<dd>
+			@Html.DisplayFor(model => model.FirstMidName)
+		</dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.FirstMidName)
-        </dt>
+		<dt>
+			@Html.DisplayNameFor(model => model.HireDate)
+		</dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.FirstMidName)
-        </dd>
+		<dd>
+			@Html.DisplayFor(model => model.HireDate)
+		</dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.HireDate)
-        </dt>
+		<dt>
+			@Html.DisplayNameFor(model => model.OfficeAssignment.Location)
+		</dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.HireDate)
-        </dd>
+		<dd>
+			@Html.DisplayFor(model => model.OfficeAssignment.Location)
+		</dd>
+	</dl>
 
-    </dl>
+	@using (Html.BeginForm())
+	{
+		@Html.AntiForgeryToken()
 
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
+		<div class="form-actions no-color">
+			<input type="submit" value="Delete" class="btn btn-default" /> |
+			@Html.ActionLink("Back to List", "Index")
+		</div>
+	}
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
-    }
 </div>
