- create ViewModels for CreateDepartment and EditDepartment; update DepartmentController and Views

--- a/ContosoUniversity/Views/Department/Create.cshtml
+++ b/ContosoUniversity/Views/Department/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model ContosoUniversity.Models.Department
+﻿@model ContosoUniversity.ViewModels.CreateDepartmentViewModel
 
 @{
 	ViewBag.Title = "Create";
