--- a/ContosoUniversity/Views/Department/Edit.cshtml
+++ b/ContosoUniversity/Views/Department/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model ContosoUniversity.Models.Department
+﻿@model ContosoUniversity.ViewModels.EditDepartmentViewModel
 
 @{
 	ViewBag.Title = "Edit";
